# dotfiles

./: .dotfiles  .env  .gitignore  .tmux.conf  .vimrc  .zshrc.pre-oh-my-zsh  README.md
.config/alacritty/: alacritty.toml
.config/ghostty/: config
.config/nvim/: init.lua
.config/nvim/lua/: close_buffer.lua  keybinds.lua
.config/nvim/lua/nvim-docker/: close_buffer.lua  init.lua  terminal_cmd.lua
.config/nvim/lua/plugins/: dotenv.lua  gitsigns.lua  indent-blankline.lua  init.lua  jupytext.lua  lazydev.lua  lualine.lua  mini.lua  molten.lua  neotest.lua  nordtheme-vim.lua  nvim-cmp.lua  nvim-lspconfig.lua  nvim-tree.lua  nvim-treesitter-context.lua  nvim-treesitter.lua  telescope.lua  vim-tmux-navigator.lua  which-key.lua
cuda/: CMakeLists.txt  default.nix  flake.nix  kernels.cu  kernels.h  test_kernel.cu  test_kernels.cpp
home-manager/: .bat.json  .smug.yml  .sops.yaml  CLAUDE.md  flake.nix  home-alien.nix  home-mbp.nix  home-rosette.nix  home-studio.nix  home-vector.nix  home.nix
home-manager/ide/: claude.nix  default.nix  git.nix  github-cli.nix  home-manager.nix  nixvim.nix  tmux.nix  unison.nix  zsh.nix
home-manager/ide/nixvim/: .bat.json  baleia.nix  bat.nix  blink-cmp.nix  bufdelete.nix  cmp.nix  default.nix  gitsigns.nix  indent-blankline.nix  lsp.nix  lualine.nix  navic.nix  nixvim.nix  nvim-tree.nix  satellite.nix  telescope.nix  tmux-navigator.nix  toggleterm.nix  vim-sleuth.nix  web-devicons.nix
home-manager/ide/nixvim/bat.nvim/: .bat.json  README.md  (+1 more)
home-manager/secrets/: secrets.yaml
python/: .gitignore  pyproject.toml  test_python.py
(+8 files in other folders)
